--- a/_index/2020-11-02-Visit-me.md
+++ b/_index/2020-11-02-Visit-me.md
@@ -5,14 +5,16 @@ permalink: pages
 description: You’ll find this post in your `_posts` directory. Go ahead and edit it and re-build the site to see your changes. # Add post description (optional)
 img:  # Add image post (optional)
 ---
-# 100-Days-of-ML-Code
+
+## Starting with fundamentals it's my journey to become a better programmer and a ML engineer.
+
 ---
-### Click below to directly read desired blog.
 
-Starting with fundamentals it's my journey to become a better programmer and a ML engineer.
+### [Day-0 | Introduction to Data Science](http://aashutoshtrivedi.github.io/100-Days-of-DataScience/Day0/)
 
-## Day-0 | Introduction to Data Science
-Check it out here [link](http://aashutoshtrivedi.github.io/100-Days-of-DataScience/Day0/)
-
-## Day-1 | Introduction to Data Preprocessing
-Check it out here [link](http://aashutoshtrivedi.github.io/100-Days-of-DataScience/Day1/)
+### [Day-1 | Introduction to Data Preprocessing](http://aashutoshtrivedi.github.io/100-Days-of-DataScience/Day1/)
+### [Day-2 | Introduction to Data Preprocessing](http://aashutoshtrivedi.github.io/100-Days-of-DataScience/Day2/)
+### [Day-3 | Introduction to Data Preprocessing](http://aashutoshtrivedi.github.io/100-Days-of-DataScience/Day3/)
+### [Day-4 | Introduction to Data Preprocessing](http://aashutoshtrivedi.github.io/100-Days-of-DataScience/Day4/)
+### [Day-5 | Introduction to Data Preprocessing](http://aashutoshtrivedi.github.io/100-Days-of-DataScience/Day5/)
+### [Day-6 | Introduction to Data Preprocessing](http://aashutoshtrivedi.github.io/100-Days-of-DataScience/Day6/)
