--- a/_index/2020-11-02-Visit-me.md
+++ b/_index/2020-11-02-Visit-me.md
@@ -10,11 +10,14 @@ img:  # Add image post (optional)
 
 ---
 
-### [Day-0 | Introduction to Data Science](http://aashutoshtrivedi.github.io/100-Days-of-DataScience/Day0/)
+### [Day-0 |  Approaching a Data Science problem](http://aashutoshtrivedi.github.io/100-Days-of-DataScience/Day0/)
 
-### [Day-1 | Introduction to Data Preprocessing](http://aashutoshtrivedi.github.io/100-Days-of-DataScience/Day1/)
+### [Day-1 |  Covid Data Analysis](http://aashutoshtrivedi.github.io/100-Days-of-DataScience/Day1/)
+
+### [Day-2 |  Matplotlib Visualization](http://aashutoshtrivedi.github.io/100-Days-of-DataScience/Day2/)
+<!-- ### [Day-1 | Introduction to Data Preprocessing](http://aashutoshtrivedi.github.io/100-Days-of-DataScience/Day1/)
 ### [Day-2 | Introduction to Data Preprocessing](http://aashutoshtrivedi.github.io/100-Days-of-DataScience/Day2/)
 ### [Day-3 | Introduction to Data Preprocessing](http://aashutoshtrivedi.github.io/100-Days-of-DataScience/Day3/)
 ### [Day-4 | Introduction to Data Preprocessing](http://aashutoshtrivedi.github.io/100-Days-of-DataScience/Day4/)
 ### [Day-5 | Introduction to Data Preprocessing](http://aashutoshtrivedi.github.io/100-Days-of-DataScience/Day5/)
-### [Day-6 | Introduction to Data Preprocessing](http://aashutoshtrivedi.github.io/100-Days-of-DataScience/Day6/)
+### [Day-6 | Introduction to Data Preprocessing](http://aashutoshtrivedi.github.io/100-Days-of-DataScience/Day6/) -->
