--- a/_index/2020-11-02-Visit-me.md
+++ b/_index/2020-11-02-Visit-me.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Index"
+title: "Index [I'm currently working on this blog. Please stay tuned]. Meanwhile visit my github account to check out my projects"
 permalink: pages
 description: You’ll find this post in your `_posts` directory. Go ahead and edit it and re-build the site to see your changes. # Add post description (optional)
 img:  # Add image post (optional)
