--- a/_posts/2020-12-11-Day2.markdown
+++ b/_posts/2020-12-11-Day2.markdown
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Weather data Visualization
-description: Day 2 # Add post description (optional)
+description: Article 2 # Add post description (optional)
 img: matplotlib.png # Add image post (optional)
 tags: [Data Science] # add tag
 ---
