--- a/_posts/2020-12-13-Day3.markdown
+++ b/_posts/2020-12-13-Day3.markdown
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Boston Housing Prediction Using XGBoost on AWS SageMaker
-description: Day 2 # Add post description (optional)
+description: Article 3 # Add post description (optional)
 img: matplotlib.png # Add image post (optional)
 tags: [Data Science] # add tag
 ---
